--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>home</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum aliquam, voluptatibus obcaecati pariatur cupiditate totam aliquid eveniet eius libero, perferendis eos, ea asperiores quam hic velit veritatis soluta? Ut, consequuntur!</p>
 </body>
 </html>
